tests/macro_attributes/inner/06-overdefined.stderr
error: More than one assignment to `inner`
 --> tests/struct_attributes/inner/06-overdefined.rs:3:1
  |
3 | #[lazy_nd(inner = false, inner = false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `lazy_nd` (in Nightly builds, run with -Z macro-backtrace for more info)
