tests/macro_attributes/inner/06-overdefined.rs
use lazy_nd::lazy_nd;

#[lazy_nd(inner = false, inner = false)]
struct Test {}

fn main() {}
